--- a/seasonticket.html
+++ b/seasonticket.html
@@ -233,7 +233,7 @@
                                                         <td>Ridgeway</td>
                                                       </tr>
                                                       <tr>
-                                                        <td>September 11th</td>
+                                                        <td>Septempber 11th</td>
                                                         <td>6:00 PM</td>
                                                         <td>Munford</td>
                                                       </tr>
@@ -347,84 +347,29 @@
                                                   <div class="centered">
                                                     <h1>
                                                     <div class="spacer3">
-                                                      <center> Welcome to Collierville High School Football </center>
+                                                      <center> Collierville High School Football Season Tickets </center>
                                                     </h1>
                                                     </div>
                                                   </div>
+                                                  <p class="pl-3"><h2>Hello Dragon Families!</h2><br><br>
+ 
+Another football season is just around the corner and we can't wait to see the 2018 Dragons take the field!  This e-mail contains important information on renewing and purchasing season tickets for the 2018 Collierville Dragons football season.<br><br>  
+ 
+As you know, the Dragons will be moving to our new, state-of-the-art football stadium with the completion of our new high school!  The new stadium is still in the construction phase, so the exact seating layout is not yet known.  We will do our best to seat you in the same general vicinity of where your tickets were located at the former Dragon Stadium (Herman Osteen Field).  Tickets will be $100 each this year, with on-line registration and payment through June 30th for current/renewing season ticket holders.  After June 30th, season ticket sales will be open to the general public.  Current season ticket holders will be seated first, current ticket holders with requests to change seats will be seated next, and new ticket holders will be assigned seats last.<br><br>
+
+<a href="http://www.teamsideline.com/Collierville">Dragons Season Tickets Registration and Payment Site</a><br><br>
+To view your seats from last year, please click on the below Google Document link, and indicate your seat numbers during the registration process.  If you would like to change seats, please select a seat labeled “Available”.   If you would like to change seats to an area that is currently occupied by someone else,  please reserve an “Available” seat, send me an e-mail with your request to change to that particular area, and I will do my best to accommodate your request once all renewals have been submitted.<br><br>
+<a href=" https://drive.google.com/file/d/1---aX9lsol9m18_J8mK8LcK84EqRIs43/view">2017 Dragons Seating Chart Google Document</a><br><br>
+<bold>**Seats from last year are NOT guaranteed if renewal is received after June 30th!</bold><br><br>We will also be selling general admission season passes for entrance to ALL home games for Varsity, JV, Freshmen and Middle School for $50.  If you, or anyone you know, is interested in a general admission pass.<br><br>
+
+Please contact me, Amy Wilhelm, at chs.dragons.tickets@gmail.com.<br><br></p>
+
+
+
+
+                                                  </div>
                                                   <!-- Start Past, present, future -->
-                                                  <div class="container marketing">
-                                                    <!-- Three columns of text below the carousel -->
-                                                    <div class="row">
-                                                      <div class="col-md-4">
-                                                        <img class="rounded-circle" src="imgs/olddragon.jpg" alt="Generic placeholder image" width="140" height="140">
-                                                          <h2>The Past</h2>
-                                                          <p>With 8 appearances in the state football playoffs over the last 10 years, Collierville is well known across the state for football. All all time record of 20-28 has helped cement Collierville in the high school football arena. Take a look at the people that continue to make this possible.</p>
-                                                          <p>
-                                                            <a class="btn btn-secondary" href="varsity.html" role="button">People &raquo;</a>
-                                                          </p>
-                                                        </div>
-                                                        <!-- /.col-lg-4 -->
-                                                        <div class="col-md-4">
-                                                          <img class="rounded-circle" src="imgs/newdragon.png" alt="Generic placeholder image" width="140" height="140">
-                                                            <h2>The Present</h2>
-                                                            <p>Led by Head Coach, Coach O'Neill, the Dragons are always getting prepared for the next season, constantly reminded of the standards they must uphold from the past. Checkout our facilities that make us one of the best programs in the state</p>
-                                                            <p>
-                                                              <a class="btn btn-secondary" href="facilities.html" role="button">Varsity Football &raquo;</a>
-                                                            </p>
-                                                          </div>
-                                                          <!-- /.col-lg-4 -->
-                                                          <div class="col-md-4">
-                                                            <img class="square" src="imgs/jointheville.png" alt="Generic placeholder image" width="140" height="140">
-                                                              <h2>The Future</h2>
-                                                              <p>Join us for a game! Checkout the schedule below</p>
-                                                              <p>
-                                                                <a class="btn btn-secondary modal-trigger" href="#varsityschedule" role="button">Varsity Schedule &raquo;</a>
-                                                              </p>
-                                                            </div>
-                                                            <!-- /.col-lg-4 -->
-                                                          </div>
-                                                          <!-- /.row -->
-                                                          <!-- End past, present, future -->
-                                                          <!-- Start latest news -->
-                                                          <div class="row mb-2">
-                                                            <div class="col-md-6">
-                                                              <div class="card flex-md-row mb-4 box-shadow h-md-250">
-                                                                <div class="card-body d-flex flex-column align-items-start">
-                                                                  <strong class="d-inline-block mb-2 text-primary">New Season</strong>
-                                                                  <h3 class="mb-0">
-                                                                    <a class="text-light" href="#">Join us for Media Day</a>
-                                                                  </h3>
-                                                                  <div class="mb-1 text-sm">July 1st</div>
-                                                                  <div class="row">
-                                                                    <div class="col-md-6">
-                                                                      <p class="card-text mb-auto">Media day is happening soon at the new Collierville High School Football Field. Be sure to join us on TBD.</p>
-                                                                    </div>
-                                                                    <div class="col-md-3">
-                                                                      <img src="imgs/newdragon.png" style="max-width:230px;max-height: 100px;height:auto;width:auto;background-color: black;">
-                                                                      </div>
-                                                                    </div>
-                                                                  </div>
-                                                                </div>
-                                                              </div>
-                                                              <div
-                                                               class="col-md-6">
-                                                                <div class="card flex-md-row mb-4 box-shadow h-md-250">
-                                                                  <div class="card-body d-flex flex-column align-items-start">
-                                                                    <strong class="d-inline-block mb-2 text-success">Dragons in the NFL</strong>
-                                                                    <h3 class="mb-0">
-                                                                      <a class="text-light" href="#">Hunter Bradley Drafted</a>
-                                                                    </h3>
-                                                                    <div class="mb-1 text-sm">May 15th</div>
-                                                                    <div class="row">
-                                                                      <div class="col-md-6">
-                                                                        <p class="card-text mb-auto">Hunter Bradley, a former Collierville Dragon, was recently drafted by the Green Bay Packers.<br>#DragonsintheNFL</p>
-                                                                      </div>
-                                                                      <div class="col-md-3">
-                                                                        <img src="imgs/huntercamp.jpg" style="max-width:230px;max-height: 100px;height:auto;width:auto;background-color: black;">
-                                                                        </div>
-                                                                      </div>
-                                                                    </div>
-                                                                  </div>
+                                                 
                                                                   <!-- End latest news -->
                                                                   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
                                                                   <script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js'></script>
