--- a/schedule.html
+++ b/schedule.html
@@ -70,7 +70,7 @@
                                   </div>
                                   <div class="column">
                                     <span class="title">
-                                      <a href="8thgrade.html">8th Grade</a>
+                                      <a href="7thand8thgrade.html">7th/8th Grade</a>
                                     </span>
                                   </div>
                                   <div class="column">
@@ -91,7 +91,7 @@
                                       </span>
                                     </div>
                                     <div class="column">
-                                      <a class="secondary-content modal-trigger" href="#7thcoach">
+                                      <a class="secondary-content modal-trigger" href="#7th/8thcoach">
                                         <i class="material-icons">contact_mail</i>
                                       </a>
                                     </div>
@@ -195,7 +195,7 @@
                                               <a href="freshman.html" target="_blank">Freshman</a>
                                             </li>
                                             <li>
-                                              <a href="8thgrade.html" target="_blank">8th Grade</a>
+                                              <a href="7thand8thgrade.html" target="_blank">7th/8th Grade</a>
                                             </li>
                                             <li>
                                               <a href="7thgrade.html" target="_blank">7th Grade</a>
@@ -236,7 +236,7 @@
   </div>
 </div>
 
-<div id="8thcoach" class="modal">
+<div id="7th/8thcoach" class="modal">
   <div class="modal-content">
     <h4>Head Coach: Coach O'Neill</h4>
     <p>Email: xxx<br>Phone:???</p>
@@ -247,15 +247,7 @@
 </div>
 
 
-<div id="7thcoach" class="modal">
-  <div class="modal-content">
-    <h4>Head Coach: Coach O'Neill</h4>
-    <p>Email: xxx<br>Phone:???</p>
-  </div>
-  <div class="modal-footer">
-    <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Done</a>
-  </div>
-</div>
+
 
 <div id="6thcoach" class="modal">
   <div class="modal-content">
